<?xml version="1.0"?>
<package format="3">
  <name>param_estimation</name>
  <version>0.0.1</version>
  <description>Parameter estimation module</description>

  <maintainer email="c.derojas@upm.es">CArmen De Rojas</maintainer>
   <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
